# fast-api-todo

./: next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
api/: index.py
api/auth/: index.py  service.py
api/crud/: crud.py
api/database/: database.py
api/model/: model.py
api/test/: test_user.py
api/utils/: helper.py
api/validation/: validation.py
app/: layout.tsx  page.tsx
app/component/: errorblock.tsx  header.tsx  model.tsx  todo.tsx  todoblock.tsx
app/login/: page.tsx
app/signup/: page.tsx
utils/: authhelper.ts  utils.ts
